--- a/asporto.html
+++ b/asporto.html
@@ -56,9 +56,6 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
-    			<div class="callout success">
-                	<p>Il martedì non serviamo sushi.</p>
-                </div>
     		</div>
     	</div>
     	<div class="grid-x grid-margin-x">
@@ -183,7 +180,7 @@
     					<div class="small-12 cell">
     						<h2>Hamburger Vegetariani<small>Serviti con patate fritte</small></h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
-                            </div>
+    						</div>
     					</div>
     				</section>
     				<section class="grid-x grid-margin-x grid-margin-y" id="carne" data-magellan-target="carne">
@@ -365,6 +362,20 @@
                 </div>
             </form>
         </div>
+        <!-- fine modal reset password -->
+    
+        <!--  <div class="grid-x grid-padding-x grid-margin-y">
+            <div class="small-12 cell">
+                <h5 class="text-center subheader">oppure</h5>
+            </div>
+        </div> -->
+        <!-- <div class="grid-x grid-padding-x grid-padding-y">
+            <div class="small-12 cell">
+                <button type="button" class="button">Accedi con Facebook</button>
+                <button type="button" class="button alert">Accedi con Google</button>
+            </div>
+        </div> -->
+    
         <form autocomplete="on">
             <div class="grid-x grid-padding-x extra-space">
                 <div class="small-12 cell">
@@ -420,13 +431,13 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><span>Lunedì:</span><time>19 - 23</time></li>
-    					<li><span>Martedì:</span><time>19 - 23</time></li>
-    					<li><span>Mercoledì:</span><time>19 - 23</time></li>
-    					<li><span>Giovedì:</span><time>19 - 23</time></li>
-    					<li><span>Venerdì:</span><time>19 - 23</time></li>
+    					<li><span>Lunedì:</span><time>Chiuso</time></li>
+    					<li><span>Martedì:</span><time>19 - 22</time></li>
+    					<li><span>Mercoledì:</span><time>19 - 22</time></li>
+    					<li><span>Giovedì:</span><time>19 - 22</time></li>
+    					<li><span>Venerdì:</span><time>19 - 22</time></li>
     					<li><span>Sabato:</span><time>19 - 23</time></li>
-    					<li><span>Domenica:</span><time>19 - 23</time></li>
+    					<li><span>Domenica:</span><time>19 - 22</time></li>
     				</ul>
     			</div>
     			<div class="cell">
