--- a/menu.html
+++ b/menu.html
@@ -1617,13 +1617,13 @@
                 <div class="cell">
                     <h1 class="subheader">Orari</h1>
                     <ul class="orari-footer-schedule no-bullet">
-                        <li><span>Lunedì:</span><time>19 - 23</time></li>
-                        <li><span>Martedì:</span><time>19 - 23</time></li>
-                        <li><span>Mercoledì:</span><time>19 - 23</time></li>
-                        <li><span>Giovedì:</span><time>19 - 23</time></li>
-                        <li><span>Venerdì:</span><time>19 - 23</time></li>
+                        <li><span>Lunedì:</span><time>Chiuso</time></li>
+                        <li><span>Martedì:</span><time>19 - 22</time></li>
+                        <li><span>Mercoledì:</span><time>19 - 22</time></li>
+                        <li><span>Giovedì:</span><time>19 - 22</time></li>
+                        <li><span>Venerdì:</span><time>19 - 22</time></li>
                         <li><span>Sabato:</span><time>19 - 23</time></li>
-                        <li><span>Domenica:</span><time>19 - 23</time></li>
+                        <li><span>Domenica:</span><time>19 - 22</time></li>
                     </ul>
                 </div>
                 <div class="cell">
@@ -1631,7 +1631,7 @@
                     <ul class="orari-footer-schedule no-bullet">
                         <li class="item "><a href="index.html">Home</a></li>
                         <li class=""><a href="riserva-un-tavolo.html">Riserva un Tavolo</a></li>
-                        <li class=""><a href="asporto.html">Ordina da Asporto</a></li>
+                        <li class="attuale"><a href="asporto.html">Ordina da Asporto</a></li>
                         <li class=""><a href="menu.html">Menù</a></li>
                         <li class=""><a href="chi-siamo.html">Chi Siamo</a></li>
                         <li class=""><a class="user-pg-btn">Il Mio Account</a></li>
