--- a/torte-ricorrenze.html
+++ b/torte-ricorrenze.html
@@ -72,7 +72,7 @@
         					<div class="cell">
         						<div class="card">
         							<div class="card-section">
-        								<h3>Cheesecake<span class="price">4&thinsp;€ a porzione (min. 4 porzioni)</span></h3>
+        								<h3>Cheesecake<span class="price ">4&thinsp;€ a porzione (min. 4 porzioni)</span></h3>
         								<p>Cheesecake in stile new york. Squisitamente dolce, morbida e leggermente acidula.</p>
         							</div>
         						</div>
@@ -80,7 +80,7 @@
         					<div class="cell">
         						<div class="card">
         							<div class="card-section">
-        								<h3>Blondie<span class="price">4&thinsp;€ a porzione (min. 4 porzioni)</span></h3>
+        								<h3>Blondie<span class="price ">4&thinsp;€ a porzione (min. 4 porzioni)</span></h3>
         								<p>Brownie con nocciole ricoperto con crema chantilly.</p>
         							</div>
         						</div>
@@ -88,7 +88,7 @@
                             <div class="cell">
                                 <div class="card">
                                     <div class="card-section">
-                                        <h3>Birramisù<span class="price">4&thinsp;€ a porzione (min. 4 porzioni)</span></h3>
+                                        <h3>Birramisù<span class="price ">4&thinsp;€ a porzione (min. 4 porzioni)</span></h3>
                                         <p>Tiramisù con savoiardi inzuppati nella birra stout. Avvolgente e cremoso.</p>
                                     </div>
                                 </div>
@@ -101,7 +101,7 @@
         					<div class="cell">
         						<div class="card">
         							<div class="card-section">
-        								<h3>Tre cioccolati<span class="price">4,5&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
+        								<h3>Tre cioccolati<span class="price ">4,5&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
         								<p>Base di financier al cioccolato ricoperta da: mousse al cioccolato fondente 70%, mousse al cioccolato al latte 41%, mousse al cioccolato bianco.</p>
         							</div>
         						</div>
@@ -109,7 +109,7 @@
         					<div class="cell">
         						<div class="card">
         							<div class="card-section">
-        								<h3>Pistacchio e Amarene<span class="price">4,5&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
+        								<h3>Pistacchio e Amarene<span class="price ">4,5&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
         								<p>Base di financier con pezzi di amarena ricoperta da: croccantino al pistacchio, mousse al pistacchio con un cuore di gel di amarena.</p>
         							</div>
         						</div>
@@ -117,7 +117,7 @@
         					<div class="cell">
         						<div class="card">
         							<div class="card-section">
-        								<h3>Caramello<span class="price">4,5&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
+        								<h3>Caramello<span class="price ">4,5&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
         								<p>Base di financier e croccantino al cioccolato ricoperta da: cremoso al carmello, cremoso di gianduia, mousse alla nocciola e glassa di caramello.</p>
         							</div>
         						</div>
@@ -130,7 +130,7 @@
         					<div class="cell">
         						<div class="card">
         							<div class="card-section">
-        								<h3>Millefoglie<span class="price">4,5&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
+        								<h3>Millefoglie<span class="price ">4,5&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
         								<p>Tre strati di sfoglia croccante ripieni di crema chantilly con gocce di cioccolato o croccantino o frutti di bosco o fragole.</p>
         							</div>
         						</div>
@@ -138,7 +138,7 @@
                             <div class="cell">
                                 <div class="card">
                                     <div class="card-section">
-                                        <h3>Croccantina<span class="price">4,5&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
+                                        <h3>Croccantina<span class="price ">4,5&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
                                         <p>Base di savoiardo bagnato al maraschino ricoperta da crema chantilly con gocce di cioccolato e croccante di mandorle.
                                         </p>
                                     </div>
@@ -272,13 +272,13 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><span>Lunedì:</span><time>19 - 23</time></li>
-    					<li><span>Martedì:</span><time>19 - 23</time></li>
-    					<li><span>Mercoledì:</span><time>19 - 23</time></li>
-    					<li><span>Giovedì:</span><time>19 - 23</time></li>
-    					<li><span>Venerdì:</span><time>19 - 23</time></li>
+    					<li><span>Lunedì:</span><time>Chiuso</time></li>
+    					<li><span>Martedì:</span><time>19 - 22</time></li>
+    					<li><span>Mercoledì:</span><time>19 - 22</time></li>
+    					<li><span>Giovedì:</span><time>19 - 22</time></li>
+    					<li><span>Venerdì:</span><time>19 - 22</time></li>
     					<li><span>Sabato:</span><time>19 - 23</time></li>
-    					<li><span>Domenica:</span><time>19 - 23</time></li>
+    					<li><span>Domenica:</span><time>19 - 22</time></li>
     				</ul>
     			</div>
     			<div class="cell">
