--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -127,9 +127,6 @@
             <form id="form" novalidate="novalidate" autocomplete="on">
                 <div class="grid-x grid-margin-x">
                     <div class="small-12 cell">
-                        <div class="callout success">
-                            <p>Il martedì non serviamo sushi.</p>
-                        </div>
                          <p>Includi in <strong>Quante persone*</strong> anche eventuali seggioloni. Esempio: 4 persone e 2 seggioloni, seleziona 6.</p>
                          <p><strong>* </strong> Indica un campo obbligatorio.</p>
                     </div>
@@ -497,13 +494,13 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><span>Lunedì:</span><time>19 - 23</time></li>
-    					<li><span>Martedì:</span><time>19 - 23</time></li>
-    					<li><span>Mercoledì:</span><time>19 - 23</time></li>
-    					<li><span>Giovedì:</span><time>19 - 23</time></li>
-    					<li><span>Venerdì:</span><time>19 - 23</time></li>
+    					<li><span>Lunedì:</span><time>Chiuso</time></li>
+    					<li><span>Martedì:</span><time>19 - 22</time></li>
+    					<li><span>Mercoledì:</span><time>19 - 22</time></li>
+    					<li><span>Giovedì:</span><time>19 - 22</time></li>
+    					<li><span>Venerdì:</span><time>19 - 22</time></li>
     					<li><span>Sabato:</span><time>19 - 23</time></li>
-    					<li><span>Domenica:</span><time>19 - 23</time></li>
+    					<li><span>Domenica:</span><time>19 - 22</time></li>
     				</ul>
     			</div>
     			<div class="cell">
