--- a/asporto.html
+++ b/asporto.html
@@ -103,7 +103,7 @@
     		</div>
     	</div>
     </div>
-    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;">
+    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;" hidden>
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
@@ -120,7 +120,7 @@
     	</div>
     </div>
     <div id="menupage-text">
-    	<div class="grid-container">
+    	<div class="grid-container" hidden>
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
     				<section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
