--- a/menu.html
+++ b/menu.html
@@ -544,14 +544,14 @@
     						</div>
     					</div> -->
                         <div class="cell">
-                            <div class="card">
+                            <!-- <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/Estivo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo">
                                     <h3>Estivo<span class="price">12,9</span></h3>
                                     <p>Burger di manzo (180 grammi), mozzarella fiordilatte, pomodoro fresco, maionese al basilico.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -699,7 +699,7 @@
     			<div class="small-12 cell">
     				<h2>Carne</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+    					<!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/CostineBBQ_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Costine BBQ">
@@ -707,7 +707,7 @@
                                     <p>Costine di suino allevato allo stato brado in salsa bbq.<span class=""><br><small>Allergeni: Anidride Solforosa e Solfiti, Glutine, Pesce, Semi di Sesamo</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
