--- a/menu.html
+++ b/menu.html
@@ -544,7 +544,7 @@
     						</div>
     					</div> -->
                         <div class="cell">
-                            <!-- <div class="card">
+                            <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/Estivo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo">
                                     <h3>Estivo<span class="price">12,9</span></h3>
@@ -560,7 +560,7 @@
                                     <p>Doppio burger di manzo (360 grammi), mozzarella fiordilatte, pomodoro fresco, maionese al basilico.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
