--- a/menu.html
+++ b/menu.html
@@ -561,7 +561,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/Norma_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Norma">
@@ -578,7 +578,7 @@
                                     <p>Doppio burger di manzo (360 grammi), crema di melanzane e basilico, pomodorini confit, ricotta salata.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
