--- a/menu.html
+++ b/menu.html
@@ -543,7 +543,7 @@
     							</div>
     						</div>
     					</div> -->
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/Estivo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo">
@@ -560,7 +560,7 @@
                                     <p>Doppio burger di manzo (360 grammi), mozzarella fiordilatte, pomodoro fresco, maionese al basilico.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -594,6 +594,24 @@
                                     <img src="assets/img/prod/CaliforniaDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="California Doppio">
                                     <h3>California Doppio<span class="price">17,9</span></h3>
                                     <p>Doppio burger di manzo (360 grammi), cheddar, bacon croccante, cipolla rossa in agrodolce,salsa guacamole, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/Autunno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Autunno">
+                                    <h3>Autunno<span class="price">13,4</span></h3>
+                                    <p>Burger di manzo (180 grammi), scamorza affumicata, speck croccante, crema di funghi.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="hssets/img/prod/AutunnoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Autunno Doppio">
+                                    <h3>Autunno Doppio<span class="price">17,9</span></h3>
+                                    <p>Doppio burger di manzo (360 grammi), pecorino vallesina, bacon croccante, erbe di campo strascinate<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
                         </div>
