--- a/menu.html
+++ b/menu.html
@@ -611,7 +611,7 @@
                                 <div class="card-section">
                                     <img src="assets/img/prod/AutunnoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Autunno Doppio">
                                     <h3>Autunno Doppio<span class="price">17,9</span></h3>
-                                    <p>Doppio burger di manzo (360 grammi), pecorino vallesina, bacon croccante, erbe di campo strascinate<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                    <p>Doppio burger di manzo (360 grammi), scamorza affumicata, speck croccante, crema di funghi.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
                         </div>
