--- a/menu.html
+++ b/menu.html
@@ -56,7 +56,7 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 medium-8 large-6 cell">
     			<h1 class="first-paragraph">Menù <small>(Coperto 1,5)</small></h1>
-    			<button onclick="toggle_text()" type="button" id="showImage" class="button expanded">Mostra immagini</button>
+    			<button onclick="toggle_text()" type="button" id="showImage" class="button large">Mostra immagini</button>
     			<!-- <p class="extra-space">Il lunedì non serviamo sushi.</p> -->
     		</div>
     	</div>
