--- a/menu.html
+++ b/menu.html
@@ -993,14 +993,14 @@
                                 </div>
                             </div>
                         </div> -->
-                        <div class="cell">
+                       <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Solarium<span class="price">4 | 6,5 | 13</span></h3>
                                     <p class="">Pacific IPA 5,1%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
