--- a/menu.html
+++ b/menu.html
@@ -1041,14 +1041,14 @@
                                 </div>
                             </div>
                         </div> -->
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Extrema Ratio<span class="price">4 | 6,5 | 13</span></h3>
     								<p class="">Doppia IPA 7,4%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     				    <!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
