--- a/menu.html
+++ b/menu.html
@@ -1364,7 +1364,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Sibilla, Amaro dell&#x27;Erborista, Anima Nera, Amaro del Capo, Sambuca Molilnari<span class="price">4</span></h3>
+    								<h3>Sibilla, Amaro dell&#x27;Erborista, Anima Nera, Amaro del Capo, Sambuca Molinari<span class="price">4</span></h3>
     								<p class=""><span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
