--- a/asporto.html
+++ b/asporto.html
@@ -56,11 +56,10 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
-                <p>Chiusi il lunedì.</p>
     		</div>
     	</div>
     	<div class="grid-x grid-margin-x">
-    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" >
+    		<div class="small-12 medium-7 large-5 xxlarge-4 cell">
     			<p>A che ora vuoi ritirare l'asporto? Ecco gli orari disponibili.<br><small>Puoi selezionare l'orario in ogni momento: anche durante la fase di checkout</small>.</p>
     			<div class="grid-x small-up-4 align-center extra-space">
     			    <div class="cell">
@@ -103,11 +102,11 @@
     		</div>
     	</div>
     </div>
-    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;" >
+    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;">
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
-    				<li><a href="#sushi">Sushi</a></li>
+    				<!-- <li><a href="#pesce">Pesce</a></li> -->
     				<li><a href="#stuzzicare">Per Stuzzicare</a></li>
     				<li><a href="#hamburger">Hamburger</a></li>
     				<li><a href="#carne">Carni</a></li>
@@ -120,50 +119,25 @@
     	</div>
     </div>
     <div id="menupage-text">
-    	<div class="grid-container" >
+    	<div class="grid-container">
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
-    				<section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
+    				<!-- <section class="grid-x grid-margin-x grid-margin-y" id="pesce" data-magellan-target="pesce">
     					<div class="small-12 cell">
-    						<h2>Sushi i Nostri Signature</h2>
+    						<h2>Pesce - Antipasti</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y" id="ecommerce-button-top">
     						</div>
     					</div>
     					<div class="small-12 cell">
-    						<h2>Sushi Special Mix</h2>
+    						<h2>Pesce - Secondi</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     						</div>
     					</div>
-    					<div class="small-12 cell">
-    						<h2>Sushi Selezione di Roll</h2>
-    						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
-    						</div>
-    					</div>
-    					<div class="small-12 cell">
-    						<h2>Sushi Uramaki Classici</h2>
-    						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
-    						</div>
-    					</div>
-    					<div class="small-12 cell">
-    						<h2>Sushi Hosomaki</h2>
-    						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
-    						</div>
-    					</div>
-    					<div class="small-12 cell">
-    						<h2>Sushi Nigiri</h2>
-    						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
-    						</div>
-    					</div>
-    					<div class="small-12 cell">
-    						<h2>Sushi Kit</h2>
-    						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
-    						</div>
-    					</div>
-    				</section>
+    				</section> -->
     				<section class="grid-x grid-margin-x grid-margin-y" id="stuzzicare" data-magellan-target="stuzzicare">
     					<div class="small-12 cell">
     						<h2>Per Stuzzicare</h2>
-    						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
+    						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y" id="ecommerce-button-top">
     						</div>
     					</div>
     				</section>
