--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <header class="homepage-hero">
     	<div class="grid-x align-center-middle text-center">
     		<div class="small-12 cell">
-    			<h1 class="text-highlight">Ca' Vecchia Beerstrot:<br>per chi ama<br>sushi e hamburger<br>goduriosi</h1>
+    			<h1 class="text-highlight">Ca' Vecchia Beerstrot:<br>il gusto in fermento</h1>
     		</div>
     		<div class="small-12 cell align-self-bottom extra-space">
     			<a href="riserva-un-tavolo.html" class="button">Riserva un Tavolo</a>
@@ -114,12 +114,12 @@
     				<section id="fotoMenu" class="splide extra-space-image-tab-home" aria-label="Immagini menù di Ca' Vecchia Beerstrot">
     					<div class="splide__track">
     						<ul class="splide__list grid-margin-y">
-    							<li class="splide__slide"><img src="assets/img/slider/RollGamberoSalmone.jpg" alt="Roll Gambero e Salmone"></li>
+    							<!-- <li class="splide__slide"><img src="assets/img/slider/RollGamberoSalmone.jpg" alt="Roll Gambero e Salmone"></li> -->
     							<li class="splide__slide"><img src="assets/img/slider/HamburgerNorma.jpg" alt="Hamburger Norma"></li>
-    							<li class="splide__slide"><img src="assets/img/slider/NigiriSalmone.jpg" alt="Nigiri Salmone"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/HosomakiSpecialSalmone_rettangolare.jpg" alt="Hosomaki Special Salmon"></li>
+    							<!-- <li class="splide__slide"><img src="assets/img/slider/NigiriSalmone.jpg" alt="Nigiri Salmone"></li> -->
+    							<!-- <li class="splide__slide"><img src="assets/img/prod/HosomakiSpecialSalmone_rettangolare.jpg" alt="Hosomaki Special Salmon"></li>
     							<li class="splide__slide"><img src="assets/img/prod/RollGamberoeSalmone_rettangolare.jpg" alt="Roll Gambero Salmone"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/RollMandorle_rettangolare.jpg" alt="Roll Mandorle"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/RollMandorle_rettangolare.jpg" alt="Roll Mandorle"></li> -->
     							<li class="splide__slide"><img src="assets/img/prod/Diablo_rettangolare.jpg" alt="Diablo"></li>
     							<li class="splide__slide"><img src="assets/img/prod/VegetarianoFagioli_rettangolare.jpg" alt="Vegetariano Fagioli"></li>
     							<li class="splide__slide"><img src="assets/img/prod/BeerstrotDOPPIO_rettangolare.jpg" alt="Beerstrot Doppio"></li>
@@ -140,10 +140,11 @@
     				<br>
     			</div>
     			<div class="medium-6 cell small-order-2 medium-order-1">
-    				<p>A <strong>Ca' Vecchia Beerstrot</strong> siamo specialisti in Sushi, Hamburger Goduriosi e Birra Artigianale, ma quella buona. A partire dal 2023, dopo mesi di sperimentazione, introduciamo anche lo street food per eccellenza in Giappone: il Sushi.</p>
+    				<p>A <strong>Ca' Vecchia Beerstrot</strong> siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona.</p>
     				<p>Gli Hamburger, di nostra produzione, contengono solo carne di prima scelta e l'arte della perfetta macinatura. Per creare i nostri Hamburger utilizziamo verdure di stagione e prodotti di piccole realtà marchigiane.</p>
-    				<p>Il Sushi, anch'esso di nostra produzione, è fatto con il miglior pesce, il miglior riso giapponese e un tocco di marchigianità che rende unica l'esperienza.</p>
     				<p>Per le Birre Artigianali, collaboriamo con micro birrifici marchigiani di comprovata qualità: Birrificio dei Castelli, Mukkeller, MC-77, Resina.</p>
+    				<p>Ogni anno introduciamo novità che ci permettono di essere fedeli al nostro motto: "Il gusto in Fermento". Da metà novembre potrai gustare un menù di pesce semplice e ricco di sapore.</p>
+    				<p></p>
     				<a href="menu.html" class="button" >Scopri il Menù</a>
     			</div>
     		</div>
@@ -185,7 +186,7 @@
     				</div>
     			</div>
     			<div class="medium-6 cell small-order-2 medium-order-1">
-    				<p>La nostra idea di cucina, la nostra storia e l'esperienza che vivrai a Ca' Vecchia Beerstrot. Come contattarci, come raggiungerci, le risposte alle domande più frequenti e le informazioni legali.</p>
+    				<p>La nostra idea di cucina, la nostra storia, le risposte alle domande più frequenti e l'esperienza che vivrai a Ca' Vecchia Beerstrot. Come contattarci, come raggiungerci.</p>
         				<a href="chi-siamo.html" class="button">Scopri Chi Siamo</a>
         			</div>
     			</div>
