--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -55,6 +55,7 @@
         <div class="grid-x grid-margin-x grid-margin-y">
             <div class="small-12 cell">
                 <h1 class="first-paragraph-no-hero" id="ttitle">Riserva un Tavolo</h1>
+                <p>Da novembre non serviamo più sushi. Da metà novembre avremo un nuovo menù di pesce super gustoso.</p>
             </div>
         </div>
     </header>
