--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     				<h2>Ristorante</h2>
     				<ul class="orari-schedule no-bullet">
     					<li><span>Lunedì:</span><time>Chiuso</time></li>
-    					<li><span>Martedì:</span><time>19 - 22</time></li>
+    					<li><span>Martedì:</span><time>Chiuso</time></li>
     					<li><span>Mercoledì:</span><time>19 - 22</time></li>
     					<li><span>Giovedì:</span><time>19 - 22</time></li>
     					<li><span>Venerdì:</span><time>19 - 22</time></li>
@@ -90,7 +90,7 @@
     				<h2>Asporto</h2>
     				<ul class="orari-schedule no-bullet">
     					<li><span>Lunedì:</span><time>Chiuso</time></li>
-    					<li><span>Martedì:</span><time>19 - 21:45</time></li>
+    					<li><span>Martedì:</span><time>Chiuso</time></li>
     					<li><span>Mercoledì:</span><time>19 - 21:45</time></li>
     					<li><span>Giovedì:</span><time>19 - 21:45</time></li>
     					<li><span>Venerdì:</span><time>19 - 21:45</time></li>
@@ -376,7 +376,7 @@
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
     					<li><span>Lunedì:</span><time>Chiuso</time></li>
-    					<li><span>Martedì:</span><time>19 - 22</time></li>
+    					<li><span>Martedì:</span><time>Chiuso</time></li>
     					<li><span>Mercoledì:</span><time>19 - 22</time></li>
     					<li><span>Giovedì:</span><time>19 - 22</time></li>
     					<li><span>Venerdì:</span><time>19 - 22</time></li>
