--- a/menu.html
+++ b/menu.html
@@ -427,7 +427,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Arrosticini_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Arrosticini">
@@ -435,7 +435,7 @@
     								<p>Arrosticini artigianali di pecora (12 pezzi).<span class=""><br><small>Allergeni: --</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1135,7 +1135,7 @@
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
     					<li><span>Lunedì:</span><time>Chiuso</time></li>
-    					<li><span>Martedì:</span><time>19 - 22</time></li>
+    					<li><span>Martedì:</span><time>Chiuso</time></li>
     					<li><span>Mercoledì:</span><time>19 - 22</time></li>
     					<li><span>Giovedì:</span><time>19 - 22</time></li>
     					<li><span>Venerdì:</span><time>19 - 22</time></li>
