--- a/orari.html
+++ b/orari.html
@@ -232,7 +232,7 @@
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
     					<li><span>Lunedì:</span><time>Chiuso</time></li>
-    					<li><span>Martedì:</span><time>19 - 22</time></li>
+    					<li><span>Martedì:</span><time>Chiuso</time></li>
     					<li><span>Mercoledì:</span><time>19 - 22</time></li>
     					<li><span>Giovedì:</span><time>19 - 22</time></li>
     					<li><span>Venerdì:</span><time>19 - 22</time></li>
