--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     		<div class="small-12 cell">
     			<h1 class="text-highlight">Ca' Vecchia Beerstrot:<br>il gusto in fermento</h1>
     		</div>
-    		<div class="small-12 cell align-self-bottom extra-space">
+    		<div class="small-12 cell align-self-bottom extra-space-button-hero">
     			<a href="riserva-un-tavolo.html" class="button">Riserva un Tavolo</a>
     			<span style="margin-right: 1.5rem; margin-left: 1.5rem"></span>
     			<a href="asporto.html" class="button">Ordina da Asporto</a>
