--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -63,7 +63,7 @@
     			<div class="small-12 medium-6 cell">
     				<h2>Filosofia</h2>
     				<p>Abbiamo scelto un locale incredibile per deliziare gli occhi e il palato. Tra nuvole e colline, per offrirti solo il meglio: Birre Artigianali strepitose, Street Food fantastico!</p>
-    				<p>Fedeli al nostro motto "Il gusto in Fermento", amiamo introdurre novità da accompagnare ai nostri <strong>Hamburger</strong> dalla qualità eccellente e dal sapore indimenticabile. Se non hai voglia di carne, puoi deliziare il tuo palato con un menù di pesce Da metà novembre potrai gustare un menù di pesce semplice e ricco di sapore.</p>
+    				<p>Fedeli al nostro motto "Il gusto in Fermento", amiamo introdurre novità da accompagnare ai nostri <strong>Hamburger</strong> dalla qualità eccellente e dal sapore indimenticabile. Se non hai voglia di carne, da metà novembre potrai gustare un menù di pesce semplice e ricco di sapore.</p>
     			</div>
     			<div class="small-12 medium-6 cell">
     				<h2>Storia</h2>
