--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     		</div>
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="medium-6 cell">
-    				<a href="asporto.html"><img src="assets/img/cover/cover-asporto.jpg" alt="Una nuova Armonia da Asporto. Sushi e Hamburger." class="extra-space-image-tab-home"></a>
+    				<a href="asporto.html"><img src="assets/img/cover/cover-asporto.jpg" alt="Asporto, take-away." class="extra-space-image-tab-home"></a>
     			</div>
     			<div class="medium-6 cell">
     				<p>Stai guardando la tua serie tv preferita da sola o con le amiche e gli amici e hai voglia di mettere qualcosa sotto i denti? Stai tifando per la tua squadra del cuore e ti è venuto un certo languore?</p>
